	declarations

	* src/ops/gen3d.cpp: Remove error wrap statements (no cerr calls in
	OBBuilder now)
	
	* src/plugin.cpp(Display): remove tab character which was giving error
	messages in wxWidgets menus.
	* windows-vc2005/OBPythonOBF: New project to build Python for OBF
	(multi-DLL) build.
	
	Update Windows OBF build files.

2008-03-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp,
	src/forcefields/forcefieldmmff94.*: Add GetGrid probe method.

	* tools/Makefile.*, tools/obprobe.cpp: Add obprobe tool, still needs
	to be implemented. (copied from obenergy)

	* tools/obminimize.cpp: Don't call ValidateGradients before
	minimizing, takes long for proteins.
	
	* data/UFF.prm: Fix SMARTS patterns for phosphorus (Bob Hanson)

	* src/forcefields/forcefielduff.cpp,
	src/forcefields/forcefieldghemical.cpp: Move loop for better
	performance.

	* src/forcefields/forcefieldmmff94.*: Make Compute() functions inline,
	some optimization to VDW Compute().

	* src/formats/atomrecord.cpp: Added using namespace std.

2008-03-22  Noel O'Boyle  <baoilleach@gmail.com>
	
	* src/formats/xml/Makefile.am: CML format can now be built without
	shared_ptr, so I removed this dependency (c.f. CM 2008-03-14)

2008-03-21  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/gausscubeformat.cpp: Applied patch from Louis Ricard and
	make it work. Read function is done, write still needs to be done.

2008-03-21 Chris Morley

	* include/openbabel/builder.h, src/builder.cpp:
	Delay parsing of fragments.txt until first use, and then
	do only once, saving in a static variable. This matters for
	gen3D where operation on multiple molecules is common.
	I know OBBuilder is still under development and is not 'my'code;
	please revert if not suitable.

2008-03-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/atomrecord.cpp: New file to handle PDB-style atom
	records -- shared between PDB and PQR formats.
